Time: 1 ms (95.93%) | Memory: 44.5 MB (45.73%) - LeetSync